parser/src/snapshots/rustpython_parser__fstring__tests__parse_fstring.snap
---
source: parser/src/fstring.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 0,
        column: 0,
    },
    custom: (),
    node: JoinedStr {
        values: [
            Located {
                location: Location {
                    row: 0,
                    column: 0,
                },
                custom: (),
                node: FormattedValue {
                    value: Located {
                        location: Location {
                            row: 1,
                            column: 2,
                        },
                        custom: (),
                        node: Name {
                            id: "a",
                            ctx: Load,
                        },
                    },
                    conversion: 0,
                    format_spec: None,
                },
            },
            Located {
                location: Location {
                    row: 0,
                    column: 0,
                },
                custom: (),
                node: FormattedValue {
                    value: Located {
                        location: Location {
                            row: 1,
                            column: 3,
                        },
                        custom: (),
                        node: Name {
                            id: "b",
                            ctx: Load,
                        },
                    },
                    conversion: 0,
                    format_spec: None,
                },
            },
            Located {
                location: Location {
                    row: 0,
                    column: 0,
                },
                custom: (),
                node: Constant {
                    value: Str(
                        "{foo}",
                    ),
                    kind: None,
                },
            },
        ],
    },
}
