parser/src/snapshots/rustpython_parser__fstring__tests__parse_fstring_yield_expr.snap
---
source: compiler/parser/src/fstring.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 0,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 0,
                column: 0,
            },
        ),
        custom: (),
        node: FormattedValue {
            value: Located {
                location: Location {
                    row: 1,
                    column: 2,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 7,
                    },
                ),
                custom: (),
                node: Yield {
                    value: None,
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
]
